# final-project-nlp

./: .gitignore  Dashboard.py  README.md  app.py  pyproject.toml  requirements.txt
A Bilingual Malay-English Social Media Dataset for/: README.txt  bilingual_hatespeech_ms_en_v2.csv  binary_performance.csv  cross_tabulated_distribution.csv  label_lang_distribution.csv
Data/: Malay Local Reformat.csv
Faris/: Text_preprocessing_checkpoint1.ipynb  Text_preprocessing_checkpoint1_MalayEng_ver.ipynb
models/: logistic_regression_bow.joblib  logistic_regression_bow_bilingual.joblib  logistic_regression_tfidf.joblib  logistic_regression_tfidf_bilingual.joblib  naive_bayes_bow.joblib  naive_bayes_bow_bilingual.joblib  naive_bayes_tfidf.joblib  naive_bayes_tfidf_bilingual.joblib  svm_bow.joblib  svm_bow_bilingual.joblib  svm_tfidf.joblib  svm_tfidf_bilingual.joblib  vectorizer_bow.joblib  vectorizer_bow_bilingual.joblib  vectorizer_tfidf.joblib  vectorizer_tfidf_bilingual.joblib
models/distillbert/checkpoint-1338/: rng_state.pth  trainer_state.json
models/distillbert/checkpoint-2676/: rng_state.pth  trainer_state.json
notebooks/: SAIA2163_FinalProject_Colab.ipynb  Text_preprocessing_checkpoint1_MalayEng_ver.ipynb  Text_preprocessing_checkpoint1_group_amil.ipynb
pages/: Bert.py  BoW.py  TF-IDF.py
results/: model_comparison.csv  model_comparison_bilingual.csv
src/: inference.py  preprocess.py  rebuild_bilingual_corpus.py  train_classical.py  train_classical_bilingual.py  train_distillbert.py  train_distillbert_bilingual.py  train_xlm_roberta_bilingual.py  xai.py
(+2 files in other folders)
